<resources>
    <string name="app_name">Calendar</string>
    <string name="button_to_display_settings">Button to display settings</string>
    <string name="button_to_display_maps">Button to display Maps</string>
    <string name="button_to_display_contacts">Button to display contacts</string>
    <string name="cell_phone">Cell Phone</string>
    <string name="home_phone">Home Phone</string>
    <string name="save">Save</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="change">Change</string>
    <string name="city">City</string>
    <string name="zip_code">Zip Code</string>
    <string name="state">State</string>
    <string name="address">Address</string>
    <string name="enter_street_address">Enter Street Address</string>
    <string name="enter_name">Enter Name</string>
    <string name="e_mail_address">E-Mail Address</string>
    <string name="birthday">Birthday:</string>
    <string name="_01_01_1970">01/01/1970</string>
    <string name="contact">Contact</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="satellite">Satellite</string>
</resources>